k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: escreveaqui-backend
  namespace: escreveaqui
spec:
  selector:
    app: escreveaqui-backend
  ports:
    - port: 8080
      targetPort: 8080
