k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: escreveaqui-frontend
  namespace: escreveaqui
spec:
  selector:
    app: escreveaqui-frontend
  ports:
    - port: 80
      targetPort: 80
