k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: escreveaqui-db
  namespace: escreveaqui
spec:
  selector:
    app: escreveaqui-db
  ports:
    - port: 5432
      targetPort: 5432
