k8s/yws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: escreveaqui-yws
  namespace: escreveaqui
spec:
  selector:
    app: escreveaqui-yws
  ports:
    - port: 1234
      targetPort: 1234
